--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
-            <div class="logo">COAL MITRA</div>
+            <div class="logo">COAL MITHRA</div>
             <ul class="nav-links">
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="employees_dashboard.html">Employees</a></li>
