--- a/public/shiftout.html
+++ b/public/shiftout.html
@@ -134,7 +134,14 @@
                     <option value="drill">Drill</option>
                 </select>
 
-                <button type="submit">Submit</button>
+ <label for="kilos">Kilos Collected</label>
+                <input type="number" id="kilos" name="kilos" placeholder="Enter kilos collected">
+
+                <!-- Button Container -->
+                <div class="button-container">
+                    <button type="button">Back</button>
+                    <button type="submit">Submit</button>
+                </div>
             </form>
         </div>
     </div>
