--- a/public/shiftin.html
+++ b/public/shiftin.html
@@ -65,6 +65,8 @@
                     <option value="dozer">Dozer</option>
                     <option value="drill">Drill</option>
                 </select>
+                <label for="supervisor_id">Supervisor ID:</label>
+                <input type="text" id="supervisor_id" name="supervisor_id" placeholder="Supervisor ID" required>
 
                 <button type="submit">Submit</button>
             </form>
