--- a/public/shiftout.html
+++ b/public/shiftout.html
@@ -17,12 +17,12 @@
 <body>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
-    <!-- Navigation to switch between Shift In and Shift Out -->
+    <!-- Navigation to switch between Shift In and Shift Out 
     <div class="nav">
         <button onclick="showShiftIn()">Shift In</button>
         <button onclick="showShiftOut()">Shift Out</button>
     </div>
-
+    -->
     <!-- Shift In Section -->
     <div class="container" id="shiftInContainer" style="display:none;">
         <!-- Left section with logo and text -->
@@ -134,8 +134,9 @@
                     <option value="drill">Drill</option>
                 </select>
 
- <label for="kilos">Kilos Collected</label>
-                <input type="number" id="kilos" name="kilos" placeholder="Enter kilos collected">
+                <label for="kilos"></label>
+                <input value="" disabled selected hidden>Enter Amount of Coal Collected:</option>
+                <input type="number" id="kilos" name="kilos" placeholder="Enter collected amount">
 
                 <!-- Button Container -->
                 <div class="button-container">
