--- a/public/shiftin.html
+++ b/public/shiftin.html
@@ -34,9 +34,9 @@
                 <label for="shifttime">Select Shift Time:</label>
                 <select id="shifttime" name="shifttime" required>
                     <option value="" disabled selected hidden>Select shift time</option>
-                    <option value="6AM-2PM">6AM - 2PM</option>
-                    <option value="2PM-10PM">2PM - 10PM</option>
-                    <option value="10PM-6AM">10PM - 6AM</option>
+                    <option value="6AM-2PM">6AM</option>
+                    <option value="2PM-10PM">2PM</option>
+                    <option value="10PM-6AM">10PM</option>
                 </select>
 
                 <label for="sector">Select the sector:</label>
@@ -67,8 +67,11 @@
                 </select>
                 <label for="supervisor_id">Supervisor ID:</label>
                 <input type="text" id="supervisor_id" name="supervisor_id" placeholder="Supervisor ID" required>
-
+ 
+                <div class="button-container">
+                    <a href="homepage.html" class="back-button">Back</a>
                 <button type="submit">Submit</button>
+            </div>
             </form>
         </div>
     </div>
@@ -110,6 +113,7 @@
 
                 if (response.ok) {
                     alert('Data submitted successfully!');
+                    window.location.href = 'homepage.html';
                 } else {
                     alert('Failed to submit data: ' + result.message);
                 }
