--- a/public/shiftin.html
+++ b/public/shiftin.html
@@ -34,9 +34,9 @@
                 <label for="shifttime">Select Shift Time:</label>
                 <select id="shifttime" name="shifttime" required>
                     <option value="" disabled selected hidden>Select shift time</option>
-                    <option value="6AM-2PM">6AM</option>
-                    <option value="2PM-10PM">2PM</option>
-                    <option value="10PM-6AM">10PM</option>
+                    <option value="6AM">6AM</option>
+                    <option value="2PM">2PM</option>
+                    <option value="10PM">10PM</option>
                 </select>
 
                 <label for="sector">Select the sector:</label>
