--- a/public/shiftout.html
+++ b/public/shiftout.html
@@ -44,9 +44,9 @@
                 <label for="shifttime">Select Shift Time:</label>
                 <select id="shifttime" name="shifttime">
                     <option value="" disabled selected hidden>Select shift time</option>
-                    <option value="6AM-2PM">2PM</option>
-                    <option value="2PM-10PM">10PM</option>
-                    <option value="10PM-6AM">6AM</option>
+                    <option value="2PM">2PM</option>
+                    <option value="10PM">10PM</option>
+                    <option value="6AM">6AM</option>
                 </select>
 
                 <label for="sector">Select the sector:</label>
